en/docs/api-manager/4.0.0/reference/connectors/kafka-connector/kafka-connector-config.md
# Kafka Connector Reference

The following operations allow you to work with the Kafka Connector. Click an operation name to see parameter details and samples on how to use it.

---

To use the Kafka connector, add the `<kafkaTransport.init>` element in your configuration before carrying out any other Kafka operations. This can be with or without security depending on your requirements.

??? note "kafkaTransport.init"
    You can configure the kafkaTransport.init operation to setup your Kafka producer with or without security.
    <table>
        <tr>
            <th>Parameter Name</th>
            <th>Description</th>
            <th>Required</th>
        </tr>
        <tr>
            <td>name</td>
            <td>Unique name to identify the connection.</td>
            <td>Yes</td>
        </tr>
        <tr>
            <td>bootstrapServers</td>
            <td>The Kafka brokers listed as host1:port1 and host2:port2.</td>
            <td>Yes</td>
        </tr>
        <tr>
            <td>keySerializerClass</td>
            <td>The serializer class for the key that implements the serializer interface.</td>
            <td>Yes</td>
        </tr>
        <tr>
            <td>valueSerializerClass</td>
            <td>The serializer class for the value that implements the serializer interface.</td>
            <td>Yes</td>
        </tr>
        <tr>
            <td>schemaRegistryUrl</td>
            <td>The URL of the confluent schema registry, only applicable when dealing with apache avro serializer class..</td>
            <td>Optional</td>
        </tr>
        <tr>
            <td>basicAuthCredentialsSource</td>
            <td>The source of basic auth credentials (e.g. USER_INFO, URL), when schema registry is secured to use basic auth..</td>
            <td>Optional</td>
        </tr>
        <tr>
            <td>basicAuthUserInfo</td>
            <td>The relevant basic auth credentials (should be used with basicAuthCredentialsSource).</td>
            <td>Optional</td>
        </tr>
        <tr>
            <td>acks</td>
            <td>The number of acknowledgments that the producer requires for the leader to receive before considering a request to be complete.</td>
            <td>Optional</td>
        </tr>
        <tr>
            <td>bufferMemory</td>
            <td>The total bytes of memory the producer can use to buffer records waiting to be sent to the server.</td>
            <td>Optional</td>
        </tr>
        <tr>
            <td>compressionType</td>
            <td>The compression type for the data generated by the producer.</td>
            <td>Optional</td>
        </tr>
        <tr>
            <td>retries</td>
            <td>Set a value greater than zero if you want the client to resent any records automatically when a request fails.</td>
            <td>Optional</td>
        </tr>
        <tr>
            <td>sslKeyPassword</td>
            <td>The password of the private key in the keystore file. Setting this for the client is optional.</td>
            <td>Optional</td>
        </tr>
        <tr>
            <td>sslKeystoreLocation</td>
            <td>The location of the key store file. Setting this for the client is optional. Set this when you want to have two-way authentication for the client.</td>
            <td>Optional</td>
        </tr>
        <tr>
            <td>sslKeystorePassword</td>
            <td>The store password for the keystore file. Setting this for the client is optional. Set it only if ssl.keystore.location is configured.</td>
            <td>Optional</td>
        </tr>
        <tr>
            <td>sslTruststoreLocation</td>
            <td>The location of the trust store file.</td>
            <td>Optional</td>
        </tr>
        <tr>
            <td>sslTruststorePassword</td>
            <td>The password for the trust store file.</td>
            <td>Optional</td>
        </tr>
        <tr>
            <td>batchSize</td>
            <td>Specify how many records the producer should batch together when multiple records are sent to the same partition.</td>
            <td>Optional</td>
        </tr>
        <tr>
            <td>clientId</td>
            <td>The client identifier that you pass to the server when making requests.</td>
            <td>Optional</td>
        </tr>
        <tr>
            <td>connectionsMaxIdleTime</td>
            <td>The duration in milliseconds after which idle connections should be closed.</td>
            <td>Optional</td>
        </tr>
        <tr>
            <td>lingerTime</td>
            <td>The time, in milliseconds, to wait before sending a record. Set this property when you want the client to reduce the number of requests sent when the load is moderate. This adds a small delay rather than immediately sending out a record. Therefore, the producer waits up to allow other records to be sent so that the requests can be batched together.</td>
            <td>Optional</td>
        </tr>
        <tr>
            <td>maxBlockTime</td>
            <td>The maximum time in milliseconds that the KafkaProducer.send() and the KafkaProducer.partitionsFor() methods can be blocked.</td>
            <td>Optional</td>
        </tr>
        <tr>
            <td>maxRequestSize</td>
            <td>The maximum size of a request in bytes.</td>
            <td>Optional</td>
        </tr>
        <tr>
            <td>partitionerClass</td>
            <td>The partitioner class that implements the partitioner interface.</td>
            <td>Optional</td>
        </tr>
        <tr>
            <td>receiveBufferBytes</td>
            <td>The size of the TCP receive buffer (SO_RCVBUF) to use when reading data.</td>
            <td>Optional</td>
        </tr>
        <tr>
            <td>requestTimeout</td>
            <td>The maximum amount of time, in milliseconds, that a client waits for the server to respond.</td>
            <td>Optional</td>
        </tr>
        <tr>
            <td>saslJaasConfig</td>
            <td>JAAS login context parameters for SASL connections in the format used by JAAS configuration files.</td>
            <td>Optional</td>
        </tr>
        <tr>
            <td>saslKerberosServiceName</td>
            <td>The Kerberos principal name that Kafka runs as.</td>
            <td>Optional</td>
        </tr>
        <tr>
            <td>saslMechanism</td>
            <td>The mechanism used for SASL.</td>
            <td>Optional</td>
        </tr>
        <tr>
            <td>securityProtocol</td>
            <td>The protocol used to communicate with brokers.</td>
            <td>Optional</td>
        </tr>
        <tr>
            <td>sendBufferBytes</td>
            <td>The size of the TCP send buffer (SO_SNDBUF) to use when sending data.</td>
            <td>Optional</td>
        </tr>
        <tr>
            <td>sslEnabledProtocols</td>
            <td>The list of protocols enabled for SSL connections.</td>
            <td>Optional</td>
        </tr>
        <tr>
            <td>sslKeystoreType</td>
            <td>The format of the keystore file. Setting this for the client is optional.</td>
            <td>Optional</td>
        </tr>
        <tr>
            <td>sslProtocol</td>
            <td>The SSL protocol used to generate the SSLContext.</td>
            <td>Optional</td>
        </tr>
        <tr>
            <td>sslProvider</td>
            <td>The name of the security provider used for SSL connections. The default value is the default security provider of the JVM.</td>
            <td>Optional</td>
        </tr>
        <tr>
            <td>sslTruststoreType</td>
            <td>The format of the trust store file.</td>
            <td>Optional</td>
        </tr>
        <tr>
            <td>timeout</td>
            <td>The maximum amount of time, in milliseconds, that the server waits for the acknowledgments from followers to meet the acknowledgment requirements that the producer has specified with acks configuration.</td>
            <td>Optional</td>
        </tr>
        <tr>
            <td>blockOnBufferFull</td>
            <td>Set to true to stop accepting new records when the memory buffer is full. When blocking is not desirable, set this property to false, which causes the producer to throw an exception if a recrord is sent to the memory buffer when it is full.</td>
            <td>Optional</td>
        </tr>
        <tr>
            <td>maxInFlightRequestsPerConnection</td>
            <td>The maximum number of unacknowledged requests that the client can send via a single connection before blocking.</td>
            <td>Optional</td>
        </tr>
        <tr>
            <td>metadataFetchTimeout</td>
            <td>The maximum amount of time, in milliseconds, to block and wait for the metadata fetch to succeed before throwing an exception to the client.</td>
            <td>Optional</td>
        </tr>
        <tr>
            <td>metadataMaxAge</td>
            <td>The period of time, in milliseconds, after which you should refresh metadata even if there was no partition leadership changes to proactively discover any new brokers or partitions.</td>
            <td>Optional</td>
        </tr>
        <tr>
            <td>metricReporters</td>
            <td>A list of classes to use as metrics reporters.</td>
            <td>Optional</td>
        </tr>
        <tr>
            <td>metricsNumSamples</td>
            <td>The number of samples maintained to compute metrics.</td>
            <td>Optional</td>
        </tr>
        <tr>
            <td>metricsSampleWindow</td>
            <td>The window of time, in milliseconds, that a metrics sample is computed over.</td>
            <td>Optional</td>
        </tr>
        <tr>
            <td>reconnectBackoff</td>
            <td>The amount of time to wait before attempting to reconnect to a given host.</td>
            <td>Optional</td>
        </tr>
        <tr>
            <td>retryBackoff</td>
            <td>The amount of time, in milliseconds, to wait before attempting to retry a failed request to a given topic partition.</td>
            <td>Optional</td>
        </tr>
        <tr>
            <td>saslKerberosKinitCmd</td>
            <td>The kerberos kinit command path.</td>
            <td>Optional</td>
        </tr>
        <tr>
            <td>saslKerberosMinTimeBeforeRelogin</td>
            <td>Login thread's sleep time, in milliseconds, between refresh attempts.</td>
            <td>Optional</td>
        </tr>
        <tr>
            <td>saslKerberosTicketRenewJitter</td>
            <td>Percentage of random jitter added to the renewal time.</td>
            <td>Optional</td>
        </tr>
        <tr>
            <td>saslKerberosTicketRenewWindowFactor</td>
            <td>The login thread sleeps until the specified window factor of time from the last refresh to the ticket's expiry is reached, after which it will try to renew the ticket.</td>
            <td>Optional</td>
        </tr>
        <tr>
            <td>sslCipherSuites</td>
            <td>A list of cipher suites.</td>
            <td>Optional</td>
        </tr>
        <tr>
            <td>sslEndpointIdentificationAlgorithm</td>
            <td>The endpoint identification algorithm to validate the server hostname using a server certificate.</td>
            <td>Optional</td>
        </tr>
        <tr>
            <td>sslKeymanagerAlgorithm</td>
            <td>The algorithm used by the key manager factory for SSL connections. The default value is the key manager factory algorithm configured for the Java Virtual Machine.</td>
            <td>Optional</td>
        </tr>
        <tr>
            <td>sslSecureRandomImplementation</td>
            <td>The SecureRandom PRNG implementation to use for SSL cryptography operations.</td>
            <td>Optional</td>
        </tr>
        <tr>
            <td>sslTrustmanagerAlgorithm</td>
            <td>The algorithm used by the trust manager factory for SSL connections. The default value is the trust manager factory algorithm configured for the Java Virtual Machine.</td>
            <td>Optional</td>
        </tr>
        <tr>
            <td>poolingEnabled</td>
            <td>Indicates whether or not connection pooling is enabled. Set to 'true' if pooling is enabled and 'false' otherwise.</td>
            <td>Optional</td>
        </tr>
        <tr>
            <td>maxActiveConnections</td>
            <td>Maximum number of active connections in the pool.</td>
            <td>Optional</td>
        </tr>
        <tr>
            <td>maxIdleConnections</td>
            <td>Maximum number of idle connections in the pool.</td>
            <td>Optional</td>
        </tr>
        <tr>
            <td>maxWaitTime</td>
            <td>Maximum number of idle connections in the pool.</td>
            <td>Optional</td>
        </tr>
        <tr>
            <td>minEvictionTime</td>
            <td>The minimum amount of time an object may remain idle in the pool before it is eligible for eviction.</td>
            <td>Optional</td>
        </tr>
        <tr>
            <td>evictionCheckInterval</td>
            <td>The number of milliseconds between runs of the object evictor.</td>
            <td>Optional</td>
        </tr>
        <tr>
            <td>exhaustedAction</td>
            <td>The behavior of the pool when the pool is exhausted (WHEN_EXHAUSTED_FAIL/WHEN_EXHAUSTED_BLOCK/WHEN_EXHAUSTED_GROW).</td>
            <td>Optional</td>
        </tr>
    </table>

    > **Performance Tuning Tip**: For better throughput, configure the parameter as follows in the configuration:
    >
    > ```
    > <maxPoolSize>20</maxPoolSize>
    > ```
    >
    > If you do not specify the maxPoolSizeparameter in the configuration, a Kafka connection is created for each message request.

    **Sample configuration**

    Given below is a sample configuration to create a producer without security.

    ```xml
    <kafkaTransport.init>
        <name>Sample_Kafka</name>
        <bootstrapServers>localhost:9092</bootstrapServers>
        <keySerializerClass>org.apache.kafka.common.serialization.StringSerializer</keySerializerClass>
        <valueSerializerClass>org.apache.kafka.common.serialization.StringSerializer</valueSerializerClass>
    </kafkaTransport.init>
    ```

    There is an additional feature for security found in Kafka version 0.9.0.0 and above. You can configure it using the element <kafkaTransport.init> as shown in the sample below:

    ```xml
    <kafkaTransport.init>
        <name>Sample_Kafka</name>
        <bootstrapServers>localhost:9092</bootstrapServers>
        <keySerializerClass>org.apache.kafka.common.serialization.StringSerializer</keySerializerClass>
        <valueSerializerClass>org.apache.kafka.common.serialization.StringSerializer</valueSerializerClass>
        <securityProtocol>SSL</securityProtocol>
        <sslTruststoreLocation>/home/hariprasath/Desktop/kafkaNewJira/certKafka/kafka.server.truststore.jks</sslTruststoreLocation>
        <sslTruststorePassword>test1234</sslTruststorePassword>
        <sslKeystoreLocation>/home/hariprasath/Desktop/kafkaNewJira/certKafka/kafka.server.keystore.jks</sslKeystoreLocation>
        <sslKeystorePassword>test1234</sslKeystorePassword>
        <sslKeyPassword>test1234</sslKeyPassword>
    </kafkaTransport.init>
    ```
    **Sample configurations for dealing with Apache Avro Serialization**

    Given below is a sample configuration to create a producer for Kafka Avro Serialization,
    
    ````xml
    <kafkaTransport.init>
        <name>Sample_Kafka</name>
        <bootstrapServers>localhost:9092</bootstrapServers>
        <keySerializerClass>io.confluent.kafka.serializers.KafkaAvroSerializer</keySerializerClass>
        <valueSerializerClass>io.confluent.kafka.serializers.KafkaAvroSerializer</valueSerializerClass>
        <schemaRegistryUrl>http://localhost:8081</schemaRegistryUrl>
    </kafkaTransport.init>
    ````
    
    Sample init configuration when confluent schema registry is secured with basic auth,
    
    ````xml
    <kafkaTransport.init>
        <name>Sample_Kafka</name>
        <bootstrapServers>localhost:9092</bootstrapServers>
        <keySerializerClass>io.confluent.kafka.serializers.KafkaAvroSerializer</keySerializerClass>
        <valueSerializerClass>io.confluent.kafka.serializers.KafkaAvroSerializer</valueSerializerClass>
        <schemaRegistryUrl>http://localhost:8081</schemaRegistryUrl>
        <basicAuthCredentialsSource>USER_INFO</basicAuthCredentialsSource>
        <basicAuthUserInfo>admin:admin</basicAuthUserInfo>
    </kafkaTransport.init>
    ````
---

### Publishing messages to Kafka

??? note "publishMessages"
    The publishMessages operation allows you to publish messages to the Kafka brokers via Kafka topics.
    <table>
        <tr>
            <th>Parameter Name</th>
            <th>Description</th>
            <th>Required</th>
        </tr>
        <tr>
            <td>topic</td>
            <td>The name of the topic.</td>
            <td>Yes</td>
        </tr>
        <tr>
            <td>partitionNo</td>
            <td>The partition number of the topic.</td>
            <td>Yes</td>
        </tr>
        <tr>
            <td>key</td>
            <td>Key of the kafka message.</td>
            <td>Optional</td>
        </tr>
        <tr>
            <td>keySchema</td>
            <td>Schema of the provided key (applicable only with Kafka Avro Serialization).</td>
            <td>Optional</td>
        </tr>
        <tr>
            <td>keySchemaId</td>
            <td>Schema id of the key schema that is stored in the confluent schema registry (applicable only with Kafka Avro Serialization).</td>
            <td>Optional</td>
        </tr>
        <tr>
            <td>value</td>
            <td>The kafka value/message.</td>
            <td>Optional</td>
        </tr>
        <tr>
            <td>valueSchema</td>
            <td>Schema of the Kafka value (applicable only with Kafka Avro Serialization).</td>
            <td>Optional</td>
        </tr>
        <tr>
            <td>valueSchemaId</td>
            <td>Schema id of the value schema that is stored in the confluent schema registry (applicable only with Kafka Avro Serialization).</td>
            <td>Optional</td>
        </tr>
        <tr>
            <td>Content-Type</td>
            <td>The Content-Type of the message.</td>
            <td>Optional</td>
        </tr>
    </table>

    If required, you can add [custom headers](https://cwiki.apache.org/confluence/display/KAFKA/A+Case+for+Kafka+Headers) to the records in publishMessage operation:

    ```xml
    <topic.Content-Type>Value</topic.Content-Type>
    ```

    You can add the parameter as follows in the publishMessage operation:

    ```xml
    <kafkaTransport.publishMessage configKey="kafka_init">
        <topic>topicName</topic>
        <partitionNo>partitionNo</partitionNo>
        <topicName.Content-Type>Value</topicName.Content-Type>
    </kafkaTransport.publishMessage>
    ```
    When dealing with Avro Serialization the key and value parameters can be configured as:
    
    ```xml
    <kafkaTransport.publishMessages>
       <topic>topicName</topic>
       <key>key of the message</key>
       <keySchema>schema of the configured key</keySchema>
       <value>value of the message</value>
       <valueSchema>schema of the configured value</valueSchema>
    </kafkaTransport.publishMessages>
    ```
    Sample configuration to retrieve the key/value schema from the Confluent Schema Registry:
    
    ```xml
    <kafkaTransport.publishMessages>
       <topic>topicName</topic>
       <key>key of the message</key>
       <keySchemaId>schemaId of the configured key</keySchema>
       <value>value of the message</value>
       <valueSchemaId>schemaId of the configured value</valueSchema>
    </kafkaTransport.publishMessages>
    ```

### Error codes related to Kafka Connector

!!! note
    With Kafka connector v3.1.2 and above, when an error occurs, one of the following errors will get set to the message context. For details on how to access these error properties, refer [Generic Properties](../../mediators/property-reference/generic-properties.md#error_code).


| **Error Code** |   **Detail**                                             |
|----------------|----------------------------------------------------------|
| 700501         | Connection error.                                        |
| 700502         | Invalid configuration.                                   |
| 700503         | Error while serializing the Avro message in the producer.|
| 700504         | Illegal type is used in an Avro message.                 |
| 700505         | Error while building Avro schemas.                       |
| 700506         | Error while parsing schemas and protocols.               |
| 700507         | Expected contents of a union cannot be resolved.         |
| 700508         | The request message cannot be processed.                 |
| 700509         | Any other Kafka related error.                           |
